--- a/MainActivity/res/values/strings.xml
+++ b/MainActivity/res/values/strings.xml
@@ -7,7 +7,19 @@
     <string name="totalcost"> Total Cost</string>
     <string name="start">Start!</string>
 	
+    <string name="participants">Participants</string>
+    <string name="tot">Total Cost:</string>
+    
+    <string name="menu_title">Choose Menu</string>
+     <string name="submenu_title1">Starter</string>
+     <string name="submenu_title2">main Course</string>
+     <string name="submenu_title3">Dessert</string>
+     
+      <string name="dish">Dish x</string>
+    
     <color name="white">#FFFFFF</color>
     <color name="red"> 	#FF0000</color>
+    
+    <string-array name="dishes"></string-array>
     
 </resources>
