Updated some layout and values XML files. Will continue working on them.

--- a/MainActivity/res/values/strings.xml
+++ b/MainActivity/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="tot">Total Cost:</string>
     <string name="menu_title">Choose Menu</string>
     <string name="submenu_title1">Starter</string>
-    <string name="submenu_title2">main Course</string>
+    <string name="submenu_title2">Main Course</string>
     <string name="submenu_title3">Dessert</string>
     <string name="dish">Dish x</string>
 
@@ -20,5 +20,7 @@
     <string-array name="dishes"></string-array>
 
     <string name="title_activity_final_view">FinalView</string>
+
+    <string name="create">Create</string>
 
 </resources>
