--- a/MainActivity/res/values/strings.xml
+++ b/MainActivity/res/values/strings.xml
@@ -3,10 +3,10 @@
 
     <string name="app_name">DinnerPlanner</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Welcome to Dinner Planner! \n \n Here you will be able to easily plan your dinner.\n \n On the next page start by selecting number of participants.\n Then select your courses. \n\n Then the magic happens!</string>
+    <string name="welcomeMessage">Welcome to Dinner Planner!\n\nHere you will be able to easily plan your dinner.\n\nOn the next page start by selecting number of participants.\n\nThen select your courses.\n\nThen the magic happens!</string>
     <string name="totalcost"> Total Cost</string>
     <string name="start">Start!</string>
-    <string name="participants">Participants</string>
+    <string name="participants">Participants:</string>
     <string name="tot">Total Cost:</string>
     <string name="menu_title">Choose Menu</string>
     <string name="submenu_title1">Starter</string>
@@ -22,5 +22,11 @@
     <string name="title_activity_final_view">FinalView</string>
 
     <string name="create">Create</string>
+
+    <string name="instructions">Instructions</string>
+
+    <string name="back">Back</string>
+
+    <string name="ingredients">Ingredients</string>
 
 </resources>
